--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                   <li><a href="#" class="active">首頁</a></li>
                   <li><a href="#">進度</a></li>
                   <li><a href="#">資源管理</a></li>
-                  <li><a href="#">訂單</a></li>
-                  <li><a href="#">工單</a></li>
+                  <li><a href="#" onclick="ToAPS()">訂單</a></li>
+                  <li><a href="#" onclick="ToUserpage2()">工單</a></li>
                   <li><a href="#">日程</a></li>
                 </ul>
             </nav>
