--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="text-center">
                         <a class="small" href="#">Forgot password?</a></div>
                     <div class="text-center co">
-                        <a class="small" href="#"  onclick=open_regist()>register</a></div>
+                        <a class="small" href="#"  onclick="open_regist()">register</a></div>
                     </form>
                 </div>
                 </div>
