--- a/Register.html
+++ b/Register.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Register</title>
-        <link rel="stylesheet" type="text/css" href="css/regiserCss.css">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="res/css/regiserCss.css">
+        <link rel="stylesheet" type="text/css" href="res/bootstrap/bootstrap.min2.css">
     </head>
     <body>
 
@@ -12,7 +12,7 @@
               <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
                 <div class="card card-signin my-5">
                   <div class="card-body">
-                    <h5 class="card-title text-center">Sign In</h5>
+                    <h5 class="card-title text-center">Account Setting</h5>
                     <form class="form-signin">
                       <div class="form-label-group">
                         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
