--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="referrer" content="no-referrer" />
-    <title>CTest</title>
+    <title>ITRI</title>
     <script src="/res/jquery/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="/res/bootstrap/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
@@ -27,7 +27,9 @@
         }
     </style>
     <script>
+        var token;
         $(document).ready(function () {
+            token = getCookie("token");
             if (token) mainInitial(StudentId);
 
 
@@ -67,23 +69,15 @@
                                     <button
                                         class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2"
                                         type="submit">Sign in</button>
-                                    <div class="text-center">
+                                    <!-- <div class="text-center">
                                         <a class="small" href="#">Forgot password?</a></div>
                                     <div class="text-center co">
-                                        <a class="small" href="#" onclick=open_regist()>register</a></div>
+                                        <a class="small" href="#" onclick=open_regist()>register</a></div> -->
                                 </form>
                             </div>
                         </div>
                     </div>
-<<<<<<< HEAD
-=======
-                    <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit">Sign in</button>
-                    <div class="text-center">
-                        <a class="small" href="#">Forgot password?</a></div>
-                    <div class="text-center co">
-                        <a class="small" href="#"  onclick="open_regist()">register</a></div>
-                    </form>
->>>>>>> 73af0c83b73adc33ea9e733fecf42e0590b8487f
+                    
                 </div>
             </div>
         </div>
@@ -136,7 +130,7 @@
 
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-light" style="font-size:1.2em;">
-            <a class="navbar-brand " style="font-size:1.4em;color:black;" href="#">QRCode</a>
+            <a class="navbar-brand " style="font-size:1.4em;color:black;" href="#">ITRI</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -150,20 +144,7 @@
                 </span>
             </div>
         </nav>
-<<<<<<< HEAD
-
-=======
-        <nav>
-                <ul >
-                  <li><a href="#" class="active">首頁</a></li>
-                  <li><a href="#">進度</a></li>
-                  <li><a href="#">資源管理</a></li>
-                  <li><a href="#" onclick="ToAPS()">訂單</a></li>
-                  <li><a href="#" onclick="ToUserpage2()">工單</a></li>
-                  <li><a href="#">日程</a></li>
-                </ul>
-            </nav>
->>>>>>> 73af0c83b73adc33ea9e733fecf42e0590b8487f
+       
         <main role="main">
             <iframe src="" id="iframe-content"></iframe>
     </div>
