--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         var token;
         $(document).ready(function () {
             token = getCookie("token");
-            if (token) mainInitial(StudentId);
+            if (token) mainInitial();
 
 
         });
@@ -77,10 +77,7 @@
                             </div>
                         </div>
                     </div>
-<<<<<<< HEAD
                     
-=======
->>>>>>> d5a10cc4a236ac135165db8cb1f0dff0534ef971
                 </div>
             </div>
         </div>
@@ -147,10 +144,7 @@
                 </span>
             </div>
         </nav>
-<<<<<<< HEAD
        
-=======
->>>>>>> d5a10cc4a236ac135165db8cb1f0dff0534ef971
         <main role="main">
             <iframe src="" id="iframe-content"></iframe>
     </div>
@@ -204,5 +198,7 @@
     <script src="/res/js/index.js" type="text/javascript"></script>
 
 </body>
+<script>
+$('#CreateModal2').modal('show');</script>
 
 </html>
