--- a/res/modalCreate/purchaseCreate.html
+++ b/res/modalCreate/purchaseCreate.html
@@ -1,31 +1,33 @@
-<link rel="stylesheet" type="text/css" href="../../res/css/APS.css">
-<link rel="stylesheet" type="text/css" href="../../res/bootstrap/bootstrap.min2.css">
-<script src="../../res/js/APS.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <div class="container">
 	<div class="row text-center">
 		<div class="col-12">
 		</div>
-		<dvi class="container h-100">
+		<dvi class="container h-120">
 
 			<!-- left frame -->
 
 			<div class="d-flex justify-content-center">
-				<div class="card mt-5 col-md-4 animated bounceInDown myForm">
+				<div class="card mt-8 col-12 animated bounceInDown myForm">
 					<div class="card-header">
-						<h4>建立排程</h4>
+						<h4>採購單-新增頁面</h4>
 					</div>
 					<div class="card-body">
 						<form name="build">
 							<div id="dynamic_container">
-								<div>設備種類</div>
+								<!-- 指定歸屬訂單編號
+								項目清單
+								負責人編號
+								預估交貨日期
+								實際交貨日期 -->
+								
+								<div>指定歸屬訂單編號</div>
 								<div class="input-group">
 									<div class="input-group-prepend">
 										<span class="input-group-text br-15"><i class="fas fa-user-graduate"></i></span>
 									</div>
 									<input type="text" placeholder="" class="form-control" />
 								</div>
-								<div>設備編號</div>
+								<div>項目清單</div>
 								<div class="input-group mt-3">
 									<div class="input-group-prepend">
 										<span class="input-group-text br-15"><i class="fas fa-phone-square"></i></span>
@@ -33,14 +35,21 @@
 									<input type="text" placeholder="" id="equipmentId" name="equipmentId"
 										class="form-control" />
 								</div>
-								<div>工作類型</div>
+								<div>負責人編號</div>
 								<div class="input-group mt-3">
 									<div class="input-group-prepend">
 										<span class="input-group-text br-15"><i class="fas fa-at"></i></span>
 									</div>
 									<input type="email" placeholder="" class="form-control" />
 								</div>
-								<div>員工編號</div>
+								<div>預估交貨日期</div>
+								<div class="input-group mt-3">
+									<div class="input-group-prepend">
+										<span class="input-group-text br-15"><i class="fas fa-at"></i></span>
+									</div>
+									<input type="email" placeholder="" class="form-control" />
+								</div>
+								<div>實際交貨日期</div>
 								<div class="input-group mt-3">
 									<div class="input-group-prepend">
 										<span class="input-group-text br-15"><i class="fas fa-at"></i></span>
@@ -50,7 +59,7 @@
 							</div>
 					</div>
 					<div class="card-footer">
-						<div>時間</div>
+						<!-- <div>時間</div>
 						<div class="input-group mt-3" style="width:120px;float:left;margin:20px">
 							<div class="input-group-prepend">
 								<span class="input-group-text br-15"><i class="fas fa-at"></i></span>
@@ -62,27 +71,14 @@
 								<span class="input-group-text br-15"><i class="fas fa-at"></i></span>
 							</div>
 							<input type="email" placeholder="結束" class="form-control" />
-						</div>
+						</div> -->
 					</div>
 					<input type="button" class="btn btn-success btn-sm float-right submit_btn" value="建立"
 						onclick="b()" />
 					</form>
 				</div>
 
-				<!-- right frame -->
-
-				<div class="col-md-4 col-xs-12 ">
-					<div class="bg-faded p-2 mt-5 ">
-						<h2 class="text-muted">最近建立排程</h2>
-						<div class="lead py-2 px-5" style="background-color:white;max-height:254px;overflow-y:auto"
-							id="APSbuild">
-						</div>
-					</div>
-				</div>
 
 			</div>
 	</div>
 </div>
-</body>
-
-</html>
